--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,3 +11,5 @@
 @import "components/links";
 @import "components/nodes";
 @import "components/references";
+@import "components/footer";
+@import "components/social-links";
