--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -14,10 +14,12 @@ footer {
     }
     .btn {
       display: inline-block;
-      margin-top: 40px;
-      margin-right: 30px;
+      width: 120px;
+      margin-top: 20px;
+      margin-right: 20px;
       padding: 1rem 1.5rem;
       color: $white;
+      text-align: center;
       background: transparent;
       border: 1px solid $white;
       border-radius: $radius;
@@ -32,6 +34,11 @@ footer {
     margin-top: 100px;
     .copyright {
       font-size: 1.3rem;
+      text-align: right;
+      @media (max-width: $md) {
+        margin-top: 100px;
+        text-align: left;
+      }
     }
   }
 }
