--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -12,15 +12,17 @@
   @media (max-width: $md) {
     position: fixed;
     z-index: -1;
-    width: calc(100vw - 60px);
+    width: 100vw;
+    max-height: 250px;
     padding: 20px 30px;
     background: linear-gradient(0deg, rgba($white, 1) 0%, rgba($white, 1) 50%, rgba($white, 0.7) 100%);
-    box-shadow: 0 2px 4px rgba($text, 0.5);
+    box-shadow: 0 2px 4px rgba($text, 0.7);
+    overflow: scroll;
     &.visible {
       z-index: 100;
-      bottom: 30px;
-      left: 30px;
-      right: 30px;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
   }
 
