--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -18,11 +18,23 @@
     background: linear-gradient(0deg, rgba($white, 1) 0%, rgba($white, 1) 50%, rgba($white, 0.7) 100%);
     box-shadow: 0 2px 4px rgba($text, 0.7);
     overflow: scroll;
+    &:after {
+      content: '';
+      position: fixed;
+      width: 100vw;
+      height: 50px;
+      background: linear-gradient(0deg, rgba($white, 1) 0%, rgba($white, 1) 30%, rgba($white, 0) 100%);
+    }
     &.visible {
       z-index: 100;
       bottom: 0;
       left: 0;
       right: 0;
+      &:after {
+        bottom: 0;
+        left: 0;
+        right: 0;
+      }
     }
   }
 
