--- a/src/sass/components/_action.scss
+++ b/src/sass/components/_action.scss
@@ -18,3 +18,27 @@
     font-weight: 500;
   }
 }
+
+.action-description {
+  padding: 20px 20px 20px 52px;
+  font-size: 1.5rem;
+  line-height: 1.2;
+  background-color: $greyPale;
+  background-image: url(../assets/lamp.svg);
+  background-repeat: no-repeat;
+  background-position: 15px 13px;
+  background-size: auto 30px;
+  border-radius: $radius;
+  &.desktop {
+    @media (max-width: $md) {
+      display: none;
+    }
+  }
+  &.mobile {
+    display: none;
+    @media (max-width: $md) {
+      display: block;
+      background-position: 15px 11px;
+    }
+  }
+}
