Add margin to action section

--- a/src/sass/components/_action.scss
+++ b/src/sass/components/_action.scss
@@ -1,5 +1,6 @@
 #action {
-  min-height: 45px;
+  margin: 40px 0 10px;
+  min-height: 50px;
   font-size: 1.6rem;
   text-align: center;
   opacity: 0;
