Add space at the bottom of info box on mobile

--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -14,7 +14,7 @@
     z-index: -1;
     width: 100vw;
     max-height: 250px;
-    padding: 20px 30px;
+    padding: 20px 30px 60px;
     background: linear-gradient(0deg, rgba($white, 1) 0%, rgba($white, 1) 50%, rgba($white, 0.7) 100%);
     box-shadow: 0 2px 4px rgba($text, 0.7);
     overflow: scroll;
