Update location of lamp svg file

--- a/src/sass/components/_action.scss
+++ b/src/sass/components/_action.scss
@@ -25,7 +25,7 @@
   font-size: 1.5rem;
   line-height: 1.2;
   background-color: $greyPale;
-  background-image: url(../assets/lamp.svg);
+  background-image: url(../svg/lamp.svg);
   background-repeat: no-repeat;
   background-position: 15px 13px;
   background-size: auto 30px;
